syntax = "proto3";

package transaction;
option go_package = "./proto";

message Transaction {
  string hash = 1;
  string from_addr = 2;
  string to_addr = 3;
  bytes signature = 4;
  uint64 amount = 5;
  uint64 fee = 6;
  uint64 nonce = 9;
  bytes data = 10;
  int64 timestamp = 7;
  int64 expires = 8;
}

message CreateTransactionRequest {
  Transaction transaction = 1;
}

message CreateTransactionResponse {
  string hash = 1;
}

message DeleteTransactionRequest {
  string hash = 1;
}

message DeleteTransactionResponse {
  bool success = 1;
}

service TransactionService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse) {}
}
